--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "vitest": "^2.1.3"
   },
   "scripts": {
-    "test": "vitest",
+    "test": "vitest engine3.test.js",
     "coverage": "vitest run --coverage"
   }
 }
